--- a/web/nginx/Dockerfile
+++ b/web/nginx/Dockerfile
@@ -16,19 +16,7 @@ RUN mkusr nginx /var/www 2201 && \
       zlib-dev \
       musl-dev && \
     conf-build "https://nginx.org/download/nginx-$VERSION.tar.gz" \
-      --prefix=/usr/local/nginx \
-      --sbin-path=/usr/sbin/nginx \
-      --modules-path=/usr/lib/nginx/modules \
       --conf-path=/etc/nginx/nginx.conf \
-      --pid-path=/run/nginx/nginx.pid \
-      --lock-path=/run/nginx/nginx.lock \
-      --error-log-path=/var/log/nginx/error.log \
-      --http-log-path=/var/log/nginx/access.log \
-      --http-client-body-temp-path=/var/tmp/nginx/client_body \
-      --http-proxy-temp-path=/var/tmp/nginx/proxy \
-      --http-fastcgi-temp-path=/var/tmp/nginx/fastcgi \
-      --http-uwsgi-temp-path=/var/tmp/nginx/uwsgi \
-      --http-scgi-temp-path=/var/tmp/nginx/scgi \
       \
       --user=nginx \
       --group=nginx \
@@ -45,11 +33,7 @@ RUN mkusr nginx /var/www 2201 && \
       --without-http_empty_gif_module && \
     apk-end .builddeps && \
     mkdir -p /etc/nginx/conf.d && \
-    mkdir -p /etc/nginx/vhosts.d && \
-    mkdir -p /run/nginx && \
-    mkdir -p /var/tmp/nginx && \
-    mkdir -p /var/log/nginx && \
-    rm -rf /usr/local/nginx
+    mkdir -p /etc/nginx/vhosts.d
 
 COPY nginx.conf /etc/nginx/
 COPY init /init/
