--- a/db/pgadmin/Dockerfile
+++ b/db/pgadmin/Dockerfile
@@ -5,7 +5,9 @@ ARG VERSION=4.15
 ARG POSTGRES_VERSION=12.1
 
 RUN /usr/src/installers/install-python3 && \
+    /usr/src/installers/install-libpq && \
     get-source pgadmin "https://ftp.postgresql.org/pub/pgadmin/pgadmin4/v${VERSION}/source/pgadmin4-${VERSION}.tar.gz" && \
+    cd /usr/src/pgadmin && \
     apk-begin .builddeps \
       coreutils \
       make \
@@ -13,21 +15,14 @@ RUN /usr/src/installers/install-python3 && \
       linux-headers \
       pkgconf \
       musl-dev \
-      readline-dev \
-      zlib-dev \
       libffi-dev \
       openssl-dev && \
-    get-source postgres-src "https://ftp.postgresql.org/pub/source/v${POSTGRES_VERSION}/postgresql-${POSTGRES_VERSION}.tar.bz2" && \
-    build-package postgres-src postgres && \
-    cd /usr/src/pgadmin && \
-    PATH=$PATH:/usr/src/postgres/usr/local/bin pip3 install -r requirements.txt && \
-    cp /usr/src/postgres/usr/local/lib/libpq.so* /usr/local/lib && \
-    rm -rf /usr/src/postgres && \
-    apk-end .builddeps && \
+    pip3 install -r requirements.txt && \
     apk-add \
       musl-dev \
       binutils && \
-    pip3 install gunicorn
+    pip3 install gunicorn && \
+    apk-end .builddeps
 
 COPY config_local.py /usr/src/pgadmin/web/
 COPY init /init/
