Turn on php-fpm status page.

--- a/web/php-fpm/etc/php-fpm.d/docker.conf
+++ b/web/php-fpm/etc/php-fpm.d/docker.conf
@@ -8,3 +8,4 @@ clear_env = no
 ; Ensure worker stdout and stderr are sent to the main error log.
 catch_workers_output = yes
 decorate_workers_output = no
+pm.status_path = /status
